[package]
name = "pollocad"
version = "0.1.0"
authors = ["Matti Virkkunen <matti@virkkunen.net>"]
edition = "2021"

[dependencies]
#pollocad-cgal = { path = "../pollocad-cgal" }
#pollocad-cascade = { path = "../pollocad-cascade" }
pollocad-occt = { path = "../pollocad-occt" }

bytemuck = "1.13"
cgmath = "0.18"
eframe = { git = "https://github.com/mvirkkunen/egui", rev = "1062f591a0227f8608cca67e46b1e3642757aecb" }
#eframe = { version = "0.21" }
fxhash = "0.2"
nom = "7.1"
nom_locate = "4.1"
threadpool = "1.8"
