[package]
name = "pollocad"
version = "0.1.0"
authors = ["Matti Virkkunen <matti@virkkunen.net>"]
edition = "2021"

[dependencies]
pollocad-occt = { path = "../pollocad-occt" }

bytemuck = "1.13"
cgmath = "0.18"
fxhash = "0.2"
nom = "7.1"
nom_locate = "4.1"
threadpool = "1.8"
gdk4-x11 = { version = "0.6.3", features = ["xlib"] }
raw-window-handle = "0.5"

[dependencies.gtk]
package = "gtk4"
version = "0.6.6"
features = ["v4_6"]
